# bkpm

./: .dockerignore  Cargo.toml  Dockerfile  bkpm.db  docker-compose.yml
data/: bkpm.db
src/: main.rs
src/api/: mod.rs
src/app/: events.rs  mod.rs  state.rs
src/db/: mod.rs
src/models/: mod.rs
src/scheduler/: mod.rs
src/tui/: mod.rs  ui.rs
static/: index.html
